checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000431014.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#43: 
> fs/quota.c:180: error: `I_MUTEX_NESTED' undeclared (first use in this function)

WARNING:TYPO_SPELLING: 'reenabled' may be misspelled - perhaps 're-enabled'?
#173: 
> >  			/* If quota was reenabled in the meantime, we have
     			                ^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:TYPO_SPELLING: 'carefull' may be misspelled - perhaps 'careful'?
#198: 
> > -	 * not do it inside dqonoff_mutex. Moreover we need to be carefull
     	                                                          ^^^^^^^^

WARNING:TYPO_SPELLING: 'iput' may be misspelled - perhaps 'input'?
#223: 
> > -			iput(discard[cnt]);
     			^^^^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000431014.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 4 warnings, 0 checks, 51 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000431014.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
